--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>«Little Bit» — українські локалізації ігор</title>
-  <meta name="description" content="«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes, Deadly Premonition." />
+  <meta name="description" content="«Little Bit» — українські локалізації відеоігор: Judgment, Yakuza, No More Heroes, Deadly Premonition, HOTEL BARCELONA, JoJo's Bizarre Adventure: All-Star Battle R." />
   <meta name="theme-color" content="#0b1220"/>
   <link rel="icon" type="image/x-icon" href="logo.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -335,7 +335,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <h2 style="margin-top:0" data-i18n="benefactors_title">Доброчинці</h2>
         <p style="color:var(--muted)" data-i18n="benefactors_desc">Це — список усіх людей, які коли-небудь підтримали діяльність нашої спілки, ми щиро їм вдячні:</p>
         <div class="chips" aria-label="Список доброчинців">
-          <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>vadkointel</strong></span>
+          <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>VADKO</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Хоук</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
           <span aria-disabled="true" tabindex="-1" class="chip">grafdralkuma</span>
@@ -371,6 +371,9 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Мухобієчка</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">beesexyial</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Володимир</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Бісик</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Ігор Д.</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Олексій Мороз</span>
           
         </div>
       </div>
@@ -385,7 +388,7 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_en:'<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 
-{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:40, goal:10000, raised:3502,
+{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:45, goal:10000, raised:3652,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -398,15 +401,15 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:5,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:8,
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:47,
+      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:55,
         desc_uk:'<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:13,
+      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:14,
         desc_uk:'<strong>Той самий пляжний епізод.</strong> Повний український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
