--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     @media (hover:hover) and (pointer:fine){ .card:hover .thumb img{ transform: scale(1.07) } }
     .thumb::after{ content:""; position:absolute; left:0; right:0; bottom:0; height:42%; background:linear-gradient(to top, rgba(2,6,23,.82), rgba(2,6,23,0)); pointer-events:none; }
     .thumb .logo{ position:absolute; left:12px; bottom:12px; max-width:70%; max-height:48%; height:auto; width:auto; object-fit:contain; filter: drop-shadow(0 10px 18px rgba(0,0,0,.55)) drop-shadow(0 0 1px rgba(255,255,255,.12)); pointer-events:none; user-select:none; }
-    .badge{position:absolute; top:12px; left:12px; background:rgba(2,6,23,.55); border:1px solid rgba(255,255,255,.25); border-radius:999px; padding:6px 10px; font-size:12px; font-weight:700}
+    .badge{position:absolute; top:12px; left:12px; background:rgba(2,6,23,.55); border:1px solid rgba(255,255,255,.25); border-radius:999px; padding:6px 10px; font-size:12px; font-weight:700} .badge.right{left:auto; right:12px} .badges-right{position:absolute; top:12px; right:12px; display:flex; gap:6px; flex-wrap:wrap; justify-content:flex-end; max-width:70%} .badges-right .badge{position:static} .badge.right{left:auto; right:12px}
     .content{ padding:14px 14px 16px; display:grid; grid-template-rows: auto 1fr auto auto auto; gap:8px; flex:1; }
     .content h3{margin:0; font-size:18px}
     .content p{margin:0; color:var(--muted); line-height:1.6; font-size:14px}
@@ -383,60 +383,65 @@ document.addEventListener('DOMContentLoaded', () => {
   <script>
     // --- Data ---
     const PROJECTS = [
-      { id:'hotel-barcelona', title:'HOTEL BARCELONA', cover:'assets/barcelona.webp', logo:'assets/barcelona_logo.webp', status:'fundraising', progress:50, goal:5000, raised:1500,
+  { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'fundraising', platforms:['PS3'], raised:0,  goal:3000, progress:0,
+        desc_uk:'<strong>Відкриваємо збір на українську локалізацію: інтерфейс, субтитри.</strong>',
+        desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong> Fundraising for a Ukrainian localization: UI, subtitles.',
+        cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
+{ id:'hotel-barcelona', title:'HOTEL BARCELONA', cover:'assets/barcelona.webp', logo:'assets/barcelona_logo.webp', status:'fundraising', progress:50, goal:5000, raised:1500,
         desc_uk:'<strong>Авторський проєкт SWERY та SUDA51.</strong> Починаємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 
-{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', progress:45, goal:10000, raised:3862,
+{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', platforms:['Steam'], progress:45, goal:10000, raised:3862,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 
-      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:88,
+      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:88, platforms:['Steam'],
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://donatello.to/post/68cd2e281994d77dfefe5291/ukrayinizator-dlya-judgment-ranniy-dostup-donatello-1-19-09-2025',animated:true}},
-            { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.webp', status:'in-progress', progress:4,
+            { id:'lost-judgment', title:'Lost Judgment', cover:'assets/lost_judgment.webp', logo:'assets/lost_judgment_logo.webp', status:'in-progress', progress:4, platforms:['Steam'],
         desc_uk:'<strong>Продовження неонуарної історії про детектива Яґамі.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>The neo-noir story of detective Yagami continues.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:8,
+      { id:'ishin', title:'Like a Dragon: Ishin!', cover:'assets/Ishin.webp', logo:'assets/Ishin_Logo.webp', status:'in-progress', progress:8, platforms:['Steam'],
         desc_uk:'<strong>Наточіть свій меч та приєднуйтесь до революції у цій історичній пригоді.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>Sharpen your blade and join the revolution in this historical adventure.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:55,
+      { id:'yk2', title:'Yakuza Kiwami 2', cover:'assets/yakuza_kiwami2.webp', logo:'assets/yakuza_kiwami2_logo.webp', status:'in-progress', progress:55, platforms:['Steam'],
         desc_uk:'<strong>Культовий ремейк на оновленому рушії.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>A cult remake on the upgraded engine.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:14,
+      { id:'y3', title:'Yakuza 3 Remastered', cover:'assets/yakuza_3_remastered.webp', logo:'assets/yakuza3_logo.webp', status:'in-progress', progress:14, platforms:['Steam'],
         desc_uk:'<strong>Той самий пляжний епізод.</strong> Повний український переклад оригінальної гри та ремейку: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>The iconic beach episode returns.</strong> Full Ukrainian translation: substories, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh1', title:'No More Heroes', cover:'assets/no_more_heroes_travis.webp', logo:'assets/no_more_heroes_logo.webp', status:'in-progress', progress:86,
+      { id:'nmh1', title:'No More Heroes', cover:'assets/no_more_heroes_travis.webp', logo:'assets/no_more_heroes_logo.webp', status:'in-progress', progress:86, platforms:['Steam'],
         desc_uk:'<strong>Перша та неповторна пригода Тревіса Тачдауна.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>The first, unmatched adventure of Travis Touchdown.</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh2', title:'No More Heroes 2: Desperate Struggle', cover:'assets/no_more_heroes_2.webp', logo:'assets/no_more_heroes2_logo.webp', status:'early-access', progress:100,
+      { id:'nmh2', title:'No More Heroes 2: Desperate Struggle', cover:'assets/no_more_heroes_2.webp', logo:'assets/no_more_heroes2_logo.webp', status:'early-access', progress:100, platforms:['Steam'],
         desc_uk:'<strong>Ще більше стилю та боїв!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Even more style and combat!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
-      { id:'tsa', title:'Travis Strikes Again: No More Heroes', cover:'assets/travis_strikes_again.webp', logo:'assets/travis_strikes_again_logo.webp', status:'in-progress', progress:23,
+      { id:'tsa', title:'Travis Strikes Again: No More Heroes', cover:'assets/travis_strikes_again.webp', logo:'assets/travis_strikes_again_logo.webp', status:'in-progress', progress:23, platforms:['Steam'],
         desc_uk:'<strong>Експериментальний спін-оф із метафікційними рівнями й мініжанрами.</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>An experimental spin-off with metafictional levels and mini-genres.</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-      { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.webp', status:'early-access', progress:100,
+      { id:'nmh3', title:'No More Heroes 3', cover:'assets/no_more_heroes_3.webp', logo:'assets/no_more_heroes3_logo.webp', status:'early-access', progress:100, platforms:['Steam','Nintendo Switch'],
         desc_uk:'<strong>Надери дупу прибульцям!</strong> Повний український переклад: Сюжет, туторіали, інтерфейс та інше.',
         desc_en:'<strong>Kick some alien butt!</strong> Full Ukrainian translation: story, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://t.me/LittleBitUA/95',animated:true}},
-	{ id:'dp1', title:"Deadly Premonition: The Director's Cut", cover:'assets/DP1.webp', logo:'assets/DP1_Logo.webp', status:'in-progress', progress:36,
+	{ id:'dp1', title:"Deadly Premonition: The Director's Cut", cover:'assets/DP1.webp', logo:'assets/DP1_Logo.webp', status:'in-progress', progress:36, platforms:['Steam','Nintendo Switch'],
         desc_uk:'<strong>Культовий містичний трилер із дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>Cult mystery thriller with quirky charm.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
-{ id:'dp2', title:'Deadly Premonition 2: A Blessing in Disguise', cover:'assets/DP2.webp', logo:'assets/DP2_Logo.webp', status:'in-progress', progress:15,
+{ id:'dp2', title:'Deadly Premonition 2: A Blessing in Disguise', cover:'assets/DP2.webp', logo:'assets/DP2_Logo.webp', status:'in-progress', progress:15, platforms:['Steam'],
         desc_uk:'<strong>Сиквел культового трилера з дивакуватим шармом.</strong> Повний український переклад у розробці: сюжет, інтерфейс, субтитри.',
         desc_en:'<strong>Sequel to the cult, quirky thriller.</strong> Full Ukrainian translation in progress: story, UI, subtitles.',
-        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},    ];
+        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
+          ];
 
     const I18N = {
       uk:{ title:'«Little Bit» — українські локалізації ігор',
@@ -534,6 +539,12 @@ document.addEventListener('DOMContentLoaded', () => {
       const d=I18N[document.documentElement.lang||'uk'];
       return status==='in-progress'? d.badge_in_progress : status==='fundraising'? d.badge_fundraising : status==='early-access'? d.badge_early_access : '';
     }
+    function platformBadges(p){
+      const arr = Array.isArray(p.platforms) ? p.platforms : (p.platform ? [p.platform] : []);
+      if (!arr.length) return '';
+      return arr.map(pl => '<span class="badge right">['+pl+']</span>').join('');
+    }
+
     function projectCard(p){
       const lang=document.documentElement.lang||'uk';
       const d=I18N[lang];
@@ -550,7 +561,8 @@ document.addEventListener('DOMContentLoaded', () => {
           <div class="thumb">
             <img src="${p.cover}" loading="lazy" alt="" aria-hidden="true">
             <img class="logo" src="${p.logo}" alt="" aria-hidden="true" loading="lazy">
-            <span class="badge">${badgeText(p.status)}</span>
+            <span class="badge">${badgeText(p.status)}</span>\n            
+            <div class="badges-right">${platformBadges(p)}</div>
           </div>
           <div class="content">
             <h3>${p.title}</h3>
