--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Бісик</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Ігор Д.</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Олексій Мороз</span>
-          
+          <span aria-disabled="true" tabindex="-1" class="chip">SpY_129</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Billey</span>
+		  
         </div>
       </div>
     </section>
@@ -392,7 +394,7 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_en:'<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 
-{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', platforms:['Steam'], progress:45, goal:10000, raised:3862,
+{ id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', platforms:['Steam'], progress:45, goal:10000, raised:3912,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
