--- a/index.html
+++ b/index.html
@@ -389,6 +389,11 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Відкриваємо збір на українську локалізацію: інтерфейс, субтитри.</strong>',
         desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong> Fundraising for a Ukrainian localization: UI, subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
+
+  { id:'uncharted-2', title:'Uncharted 2: Among Thieves', cover:'assets/Uncharted2.webp', logo:'assets/Uncharted2_Logo.webp', status:'fundraising', platforms:['PS3'], raised:0,  goal:8000, progress:0,
+        desc_uk:'<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>',
+        desc_en:'<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.',
+        cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 { id:'hotel-barcelona', title:'HOTEL BARCELONA', cover:'assets/barcelona.webp', logo:'assets/barcelona_logo.webp', status:'fundraising', progress:50, goal:5000, raised:2500,
         desc_uk:'<strong>Авторський проєкт SWERY та SUDA51.</strong> Починаємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
