--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Олексій Мороз</span>
           <span aria-disabled="true" tabindex="-1" class="chip">SpY_129</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Billey</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Іван Кіпрв</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">KAREMBO</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">соня</span>
 		  
         </div>
       </div>
