--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <script>
     // --- Data ---
     const PROJECTS = [
-  { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'fundraising', platforms:['PS3'], raised:1200,  goal:3000, progress:0,
+  { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'fundraising', platforms:['PS3'], raised:1200,  goal:3000, progress:30,
         desc_uk:'<strong>Відкриваємо збір на українську локалізацію: інтерфейс, субтитри.</strong>',
         desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong> Fundraising for a Ukrainian localization: UI, subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
@@ -407,7 +407,7 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
 
-      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'in-progress', progress:89, platforms:['Steam'],
+      { id:'judgment', title:'Judgment', cover:'assets/judgment_takayuki.webp', logo:'assets/judgment_logo.webp', status:'early-access', progress:89, platforms:['Steam'],
         desc_uk:'<strong>Неонуарний детективний бойовик від авторів Yakuza.</strong> Повний український переклад: підісторії (побічні завдання), туторіали, інтерфейс та інше.',
         desc_en:'<strong>Neo-noir detective action from the creators of Yakuza.</strong> Full Ukrainian translation: side cases, tutorials, UI, and more.',
         cta:{type:'link',label_uk:'Завантажити',label_en:'Download',url:'https://donatello.to/post/68de432ff7753d8d33210ca4/ukrayinizator-dlya-judgment-ranniy-dostup-donatello-2-02-10-2025',animated:true}},
