--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ document.addEventListener('DOMContentLoaded', () => {
   <script>
     // --- Data ---
     const PROJECTS = [{ id:'mgs2', title:'METAL GEAR SOLID 2: Sons of Liberty — Master Collection Version', cover:'assets/MGS2.webp', logo:'assets/MGS2_Logo.webp', status:'fundraising', platforms:['Steam'], raised:0, goal:25000, progress:0,
-        desc_uk:'<strong>Культова стелс-екшен класика від Hideo Kojima у збірці Master Collection.</strong> Збір на українську локалізацію: інтерфейс, субтитри.',
+        desc_uk:'Збір на українську локалізацію: інтерфейс, субтитри.',
         desc_en:'<strong>Iconic stealth‑action classic by Hideo Kojima (Master Collection).</strong> Fundraising for a Ukrainian localization: UI and subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
   { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'fundraising', platforms:['PS3'], raised:1200,  goal:3000, progress:30,
