--- a/index.html
+++ b/index.html
@@ -389,17 +389,17 @@ document.addEventListener('DOMContentLoaded', () => {
     // --- Data ---
     const PROJECTS = [
 
-  { id:'lad', title:'Yakuza: Like a Dragon', cover:'assets/LaD.webp', logo:'assets/LaD_logo.webp', status:'fundraising', raised:25, goal:35000, progress:0,
+  { id:'lad', title:'Yakuza: Like a Dragon', cover:'assets/LaD.webp', logo:'assets/LaD_logo.webp', status:'fundraising', raised:75, goal:35000, progress:0,
         desc_uk:'<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>',
         desc_en:'<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},{ id:'mgs2', title:'METAL GEAR SOLID 2: Sons of Liberty — Master Collection Version', cover:'assets/MGS2.webp', logo:'assets/MGS2_Logo.webp', status:'fundraising', platforms:['Steam'], raised:1553, goal:25000, progress:0,
         desc_uk:'Збір на українську локалізацію: інтерфейс, субтитри.',
         desc_en:'<strong>Iconic stealth‑action classic by Hideo Kojima (Master Collection).</strong> Fundraising for a Ukrainian localization: UI and subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
-  { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'fundraising', platforms:['PS3'], raised:2200,  goal:3000, progress:30,
-        desc_uk:'<strong>Відкриваємо збір на українську локалізацію: інтерфейс, субтитри.</strong>',
-        desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong> Fundraising for a Ukrainian localization: UI, subtitles.',
-        cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
+  { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'in-progress', progress:82, platforms:['PS3'],
+        desc_uk:'<strong>Повний український переклад.</strong>',
+        desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong>Ukrainian localization: UI, subtitles.',
+        cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
   { id:'uncharted-2', title:'Uncharted 2: Among Thieves', cover:'assets/Uncharted2.webp', logo:'assets/Uncharted2_Logo.webp', status:'fundraising', platforms:['PS3'], raised:0,  goal:8000, progress:0,
         desc_uk:'<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>',
         desc_en:'<strong>Fundraising for a Ukrainian localization.</strong> UI and subtitles.',
@@ -408,7 +408,7 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_uk:'<strong>Авторський проєкт SWERY та SUDA51.</strong> Починаємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>An auteur project by SWERY and SUDA51.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
-  { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', platforms:['Steam'], progress:45, goal:10000, raised:7749,
+  { id:'jojo-asbr', title:"JoJo's Bizarre Adventure: All-Star Battle R", cover:'assets/jojo_asbr.webp', logo:'assets/jojo_asbr_logo.webp', status:'fundraising', platforms:['Steam'], progress:45, goal:10000, raised:7949,
         desc_uk:'<strong>Легендарні бійці та стенди в арені мрії.</strong> Відкриваємо збір на повну українську локалізацію: інтерфейс, субтитри, туторіали.',
         desc_en:'<strong>Legendary fighters and Stands in a dream arena.</strong> Fundraising for a full Ukrainian localization: UI, subtitles, tutorials.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
