--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@ document.addEventListener('DOMContentLoaded', () => {
         desc_en:'<strong>Iconic stealth‑action classic by Hideo Kojima (Master Collection).</strong> Fundraising for a Ukrainian localization: UI and subtitles.',
         cta:{type:'enable',label_uk:'Спонсорувати',label_en:'Sponsor',url:'https://donatello.to/LittleBitUA',primary:true}},
   { id:'uncharted-df', title:"Uncharted: Drake's Fortune", cover:'assets/Uncharted.webp', logo:'assets/Uncharted_logo.webp', status:'in-progress', progress:82, platforms:['PS3'],
-        desc_uk:'<strong>Повний український переклад.</strong>',
-        desc_en:'<strong>Cinematic adventure of Nathan Drake.</strong>Ukrainian localization: UI, subtitles.',
+        desc_uk:'<strong>Повна українська локалізація.</strong> Інтерфейс і субтитри.',
+desc_en:'<strong>Full Ukrainian localization.</strong> UI & subtitles.',
         cta:{type:'disabled',label_uk:'Завантажити',label_en:'Download',url:'#'}},
   { id:'uncharted-2', title:'Uncharted 2: Among Thieves', cover:'assets/Uncharted2.webp', logo:'assets/Uncharted2_Logo.webp', status:'fundraising', platforms:['PS3'], raised:0,  goal:8000, progress:0,
         desc_uk:'<strong>Збір на українську локалізацію: інтерфейс, субтитри.</strong>',
