--- a/index.html
+++ b/index.html
@@ -379,6 +379,16 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Іван Кіпрв</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">KAREMBO</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">соня</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">rage</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Бурʼян</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">LoydiN</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Андрійко</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Смуток</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Misha</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Мемна Арта</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Микита</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Мирослав Сеник</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Andryxa</span>
 		  
         </div>
       </div>
