--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="chips" aria-label="Список доброчинців">
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>VADKO</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Хоук</strong></span>
+		  <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Hlamingo</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
           <span aria-disabled="true" tabindex="-1" class="chip">grafdralkuma</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Мимокрокодил</span>
@@ -406,7 +407,6 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Нудьга</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">YarosTop1GG</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Павло</span>
-		  <span aria-disabled="true" tabindex="-1" class="chip">Hlamingo</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Kazeiro Artist💗</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Jean Kartösciante</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">JoJo</span>
