--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="chips" aria-label="Список доброчинців">
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>VADKO</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Хоук</strong></span>
-		  <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Hlamingo</strong></span>
+		  <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">🦩 <strong>Hlamingo</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
           <span aria-disabled="true" tabindex="-1" class="chip">grafdralkuma</span>
           <span aria-disabled="true" tabindex="-1" class="chip">Мимокрокодил</span>
